# gpio-wasm-components

./: README.md
impl/: .gitignore  Cargo.toml  Makefile  guest.large.host.implementation.component.wasm  guest.memory.component.wasm  readme.md  wasi_snapshot_preview1.reactor.wasm
impl/guest-js/: exports.js  index.mjs  package-lock.json  package.json  readme.md
impl/guest-rs/: Cargo.toml  guest.component.wasm
impl/guest-rs/src/: lib.rs
impl/host/: Cargo.toml
impl/host/src/: main.rs
impl/host/src/bindings/: mod.rs
impl/host/src/bindings/world_gpio_app/: linux.rs  mod.rs  sim.rs
impl/host/src/commands/: mod.rs  run.rs  version.rs
impl/native/: Cargo.toml  readme.md
impl/native/src/: main.rs
impl/wit/: world.wit
